--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "degit"
-version = "0.1.3"
-authors = ["Vlad Pănăzan <brgdvz@gmail.com>"]
-edition = "2018"
+name = "degit-rs"
+version = "0.2.0"
+authors = ["Vlad Pănăzan <brgdvz@gmail.com>", "Zach Fedor <zachfedor@gmail.com>"]
+edition = "2024"
 description = "Rust rewrite of degit"
 license = "MIT"
 readme= "README.md"
-repository = "https://github.com/psnszsn/degit-rs"
+repository = "https://github.com/zachfedor/degit-rs"
 
 [dependencies]
 clap = "2.33.0"
